[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/dialog_editor/scripts/end_node_behaviour.gd" type="Script" id=1]

[node name="EndNode" type="GraphNode"]
margin_right = 102.0
margin_bottom = 58.0
rect_min_size = Vector2( 250, 0 )
title = "End"
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 234.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 218.0
margin_bottom = 14.0
text = "End Conversation"

[node name="NextContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 218.0
margin_bottom = 38.0

[node name="NextLabel" type="Label" parent="VBoxContainer/NextContainer"]
margin_top = 3.0
margin_right = 34.0
margin_bottom = 17.0
text = "Next:"

[node name="NextOptions" type="OptionButton" parent="VBoxContainer/NextContainer"]
margin_left = 46.0
margin_right = 218.0
margin_bottom = 20.0

[connection signal="close_request" from="." to="." method="node_closed"]
[connection signal="item_selected" from="VBoxContainer/NextContainer/NextOptions" to="." method="set_conversation_from_index"]
